--- a/assets/css/magister.css
+++ b/assets/css/magister.css
@@ -213,7 +213,7 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 /*                 UI - Masonry                         */
 /********************************************************/
 
-#work-examples {
+.work-examples {
 	width:95%;
 	margin:0 auto;
 	margin-top:40px;
@@ -221,6 +221,9 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 
 .item { 
 	width: 260px;
+	-webkit-transition: all .4s;
+	   -moz-transition: all .4s;
+	        transition: all .4s;
 }
 
 .item.w2 {
@@ -233,6 +236,12 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 
 .item.w4 {
 	width:1052px;
+}
+
+
+.item:hover {
+  background: rgba(0,0,0, .2);
+  cursor: pointer;
 }
 
 /********************************************************/
@@ -274,7 +283,13 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 	margin:0 auto;
 }
 
-
+#portrait {
+	background-color: rgba(255,255,255,.3);
+	margin:0 auto;
+	padding:8px;
+	border-radius:4px;
+	width:416px;
+}
 
 
 
