--- a/assets/css/magister.css
+++ b/assets/css/magister.css
@@ -291,29 +291,14 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 	width:416px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#map {
+	background-color: rgba(255,255,255,.3);
+	margin:0 auto;
+	padding:8px;
+	border-radius:4px;
+	width:200px;
+	height:200px;
+}
 
 
 
